@@ -66,6 +66,8 @@ Avro 1.6.0 (unreleased)
     AVRO-887. Java: Improve reflection error message when a field is
     not found in a class.  (cutting)
 
+    AVRO-874. Remove experimental disclaimer from IDL documentation. (cutting)
+
   BUG FIXES
 
     AVRO-824. Java: Fix usage message of BinaryFragmentToJsonTool.
